test/should-succeed/check.while
(check {= (+ 2 2) 4})
(check {< 1 2 3 4})

(begin
  (assert {> x 5})
  (assert {> x 2}))
