test/should-fail/error-in-proc-body.while
(define (foo x)
  {= x 5}
  {= x 10}
  (x := 7))

(skip)
